--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,78 @@
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
 asgiref==3.8.1
+attrs==25.1.0
+autobahn==24.4.2
+Automat==24.8.1
 autopep8==1.5.7
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
+channels==4.0.0
 charset-normalizer==3.4.1
+constantly==23.10.4
 cryptography==44.0.1
+daphne==4.1.2
+distro==1.9.0
 Django==5.1.6
 django-allauth==65.4.1
 django-cors-headers==3.8.0
 djangorestframework==3.15.2
+dotenv==0.9.9
+frozenlist==1.5.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-vision==3.10.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.68.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
+jiter==0.8.2
 jwt==1.3.1
 legacy-cgi==2.6.2
+multidict==6.1.0
 pillow==11.1.0
+propcache==0.3.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycodestyle==2.7.0
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyJWT==2.8.0
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
+PyPDF2==3.0.1
+python-dotenv==1.0.1
 pytz==2021.1
 requests==2.32.3
+rsa==4.9
+service-identity==24.2.0
 setuptools==75.8.0
+sniffio==1.3.1
 sqlparse==0.4.2
 toml==0.10.2
+tqdm==4.67.1
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.3.0
+whitenoise==6.9.0
+yarl==1.18.3
+zope.interface==7.2
